--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
           fileList.innerHTML = '';
           const apiUrl = `https://api.github.com/repos/PandaHo485/BasicFilesForSRB2Server/contents/${directory}`
 
-             try{
+            try {
                 const response = await fetch(apiUrl)
                 if(!response.ok) throw new Error("Network error")
                 const data = await response.json()
-                if(data.length === 0) {
-                  emptyMessage.classList.remove('hidden')
-                   container.classList.remove('hidden')
-                   return
+                if (data.length === 0) {
+                    emptyMessage.classList.remove('hidden')
+                    container.classList.remove('hidden')
+                    return
                 }
-                emptyMessage.classList.add('hidden');
-               data.forEach(item => {
+               emptyMessage.classList.add('hidden');
+                data.forEach(item => {
                     if (item.type === 'file') {
-                       const listItem = document.createElement("li");
+                        const listItem = document.createElement("li");
                         const link = document.createElement("a");
                         link.href = item.name;
                         link.textContent = item.name;
@@ -161,128 +161,132 @@
                         fileList.appendChild(listItem);
                     }
                 });
-                container.classList.remove('hidden')
-             }
-             catch(error){
-                 console.log(error)
-             }
+               container.classList.remove('hidden')
+            } catch (error) {
+                console.log(error)
+            }
              finally{
-               container.querySelector('.loading').style.display = 'none';
-             }
-         };
+                container.querySelector('.loading').style.display = 'none';
+            }
+        };
          const hideOtherContainers = (current, categoryName) => {
-            fileListContainers.forEach(container => {
+             fileListContainers.forEach(container => {
                  if (container !== current) {
-                   container.classList.add('hidden')
-                    container.querySelector('.loading').style.display = ''
-                    container.querySelector('.empty-message').classList.add('hidden');
+                     container.classList.add('hidden')
+                     container.querySelector('.loading').style.display = ''
+                     container.querySelector('.empty-message').classList.add('hidden');
                 }
-            })
-          if(categoryName === "addons"){
-              creationsButton.classList.add('hidden');
-            bioLink.classList.add('hidden');
+           })
+           if(categoryName === "addons"){
+               creationsButton.classList.add('hidden');
+             bioLink.classList.add('hidden');
             }
           else if(categoryName === "creations"){
-               addonsButton.classList.add('hidden');
-            bioLink.classList.add('hidden');
+              addonsButton.classList.add('hidden');
+             bioLink.classList.add('hidden');
             }
         }
+
         const showAllButtons = () => {
-             creationsButton.classList.remove('hidden');
-               addonsButton.classList.remove('hidden');
+            creationsButton.classList.remove('hidden');
+            addonsButton.classList.remove('hidden');
             bioLink.classList.remove('hidden');
         }
 
         const toggleButton = (container, button) => {
             if (container.classList.contains('hidden')) {
                 button.textContent = 'Hide';
-            }
-            else{
-               button.textContent = button.id.replace('-button', '');
+            } else {
+                button.textContent = button.id.replace('-button', '');
             }
         }
-        const toggleCategory = (container, button, categoryName) => {
+
+
+       const toggleCategory = (container, button, categoryName) => {
            if(!canToggleAddons && categoryName === 'addons' ){
-               return
+              return
             }
-          if(!canToggleCreations && categoryName === 'creations'){
+           if(!canToggleCreations && categoryName === 'creations'){
                 return
-           }
-           hideOtherContainers(container, categoryName);
-         if(container.classList.contains('hidden')){
-                toggleButton(container, button);
+            }
+
+          hideOtherContainers(container, categoryName);
+            if(container.classList.contains('hidden')){
+              toggleButton(container, button);
                if(categoryName === 'addons') toggleAddonsCount++;
-              if(categoryName === 'creations') toggleCreationsCount++;
-              fetchAndDisplayFiles(container,  categoryName === 'addons' ? 'addons' : 'my_addons', container.querySelector('.empty-message'))
-            }
+                if(categoryName === 'creations') toggleCreationsCount++;
+               fetchAndDisplayFiles(container, categoryName === 'addons' ? 'addons' : 'my_addons', container.querySelector('.empty-message'));
+          }
            else {
-             container.classList.add('hidden');
-               container.querySelector('.loading').style.display = '';
-               showAllButtons();
+                toggleButton(container, button);
+               container.classList.add('hidden');
+                container.querySelector('.loading').style.display = '';
+                showAllButtons();
             }
-           toggleButton(container, button);
-           if((categoryName === 'addons' && toggleAddonsCount > SHOW_HIDE_LIMIT) || (categoryName === 'creations' && toggleCreationsCount > SHOW_HIDE_LIMIT)){
-                alert("Hey! End this toy game! Download or go!");
-               if(categoryName === 'addons') {
-                    canToggleAddons = false;
+
+            if((categoryName === 'addons' && toggleAddonsCount > SHOW_HIDE_LIMIT) || (categoryName === 'creations' && toggleCreationsCount > SHOW_HIDE_LIMIT)){
+               alert("Hey! End this toy game! Download or go!");
+              if(categoryName === 'addons') {
+                   canToggleAddons = false;
                     setTimeout(() => {
-                       canToggleAddons = true;
-                   }, COOLDOWN_TIME);
-              }
-                if(categoryName === 'creations'){
+                      canToggleAddons = true;
+                    }, COOLDOWN_TIME);
+               }
+               if(categoryName === 'creations'){
                    canToggleCreations = false;
                    setTimeout(() => {
                        canToggleCreations = true;
                   }, COOLDOWN_TIME);
-                }
+               }
            }
         }
         // Show/Hide functionality for addons
-         addonsButton.addEventListener('click', () => {
-            toggleCategory(addonsContainer, addonsButton, 'addons')
-         });
+        addonsButton.addEventListener('click', () => {
+            toggleCategory(addonsContainer, addonsButton, 'addons');
+        });
+
         // Show/Hide functionality for creations
-         creationsButton.addEventListener('click', () => {
-                toggleCategory(creationsContainer, creationsButton, 'creations')
+        creationsButton.addEventListener('click', () => {
+            toggleCategory(creationsContainer, creationsButton, 'creations');
         });
 
           // Search functionality
           searchBar.addEventListener('input', () => {
-              clearTimeout(searchTimeout);
-             if(searchBar.value.length < 1) {
+            clearTimeout(searchTimeout);
+            if(searchBar.value.length < 1) {
                 searchBar.placeholder = "Search for an addon"
-                 fileListContainers.forEach(container => {
-                      container.classList.remove('hidden');
-               })
+               fileListContainers.forEach(container => {
+                     container.classList.remove('hidden');
+                })
                 return
-           }
-           searchBar.placeholder = ''
-           searchTimeout = setTimeout(() => {
-               const searchTerm = searchBar.value.toLowerCase();
-              fileListContainers.forEach(container => {
-                const fileList = container.querySelectorAll('li a')
-                 fileList.forEach(link => {
-                      const filename = link.textContent.toLowerCase()
+          }
+            searchBar.placeholder = ''
+             searchTimeout = setTimeout(() => {
+                const searchTerm = searchBar.value.toLowerCase();
+                 fileListContainers.forEach(container => {
+                    const fileList = container.querySelectorAll('li a')
+                   fileList.forEach(link => {
+                     const filename = link.textContent.toLowerCase()
                        const index = filename.indexOf(searchTerm);
                      if (index > -1) {
-                            let highlighted = filename.substring(0, index)
+                           let highlighted = filename.substring(0, index)
                            highlighted += `<span style="background-color:orange;">${filename.substring(index, index+ searchTerm.length)}</span>`
                            highlighted += filename.substring(index+searchTerm.length)
                             link.innerHTML = highlighted
                            link.parentElement.style.display = 'block'
-                      }
+                        }
                        else{
                           link.parentElement.style.display = 'none'
-                      }
-                });
-                   if(!container.querySelector('li a:not([style*="display: none;"])')){
-                     container.classList.add('hidden')
+                       }
+                   });
+                    if(!container.querySelector('li a:not([style*="display: none;"])')){
+                      container.classList.add('hidden')
                    }
-                  else{
-                    container.classList.remove('hidden')
-                    }
-              })
-            }, 2000);
+                   else{
+                      container.classList.remove('hidden')
+                   }
+               })
+           }, 2000);
          });
     </script>
 </body>
